console: Handle both (valid) Unicode strings and binary correctly

When printing a value that is a string back to the terminal, check if
it's valid Unicode; if so, print it.  Otherwise, we use escape
sequences for non-ASCII.

https://bugzilla.gnome.org/show_bug.cgi?id=643479